2003-05-13  Morten Welinder  <terra@gnome.org>

	* dialog-stf.c (stf_dialog): Make sure we hold a ref to the window
	so it doesn't disappear underneath us.
	(stf_dialog_attach_page_signals): Hook up a destroy signal.

2003-05-12  Jody Goldberg <jody@gnome.org>

	* cell-format.glade : fix hig-ification

2003-05-12   Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-stf-csv-page.c (csv_page_global_change): the string 
	  indicator could be multibyte
	* alog-stf-export.glade: replace Charset label to be consistent
	  with import dialog

2003-05-11  Jody Goldberg <jody@gnome.org>

	* Release 1.1.17

2003-05-10   Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-stf-csv-page.c: fix previously forgotten #include
	
2003-05-09   Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-stf-export-format-page.c 
	(stf_export_dialog_format_page_init) : initialize 
	  format_transliterate 
	(stf_export_dialog_format_page_result): read
	  format_transliterate
	* dialog-stf-export-private.h (StfE_FormatPageData_t): add
	  format_transliterate
	* dialog-stf-export.glade: add tranliteration option menu

2003-05-08   Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-stf-csv-page.c: add forgotten #include

2003-05-08   Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=78355
	* dialog-stf-csv-page.c (stf_dialog_csv_page_prepare):
	  set the default separator

2003-05-07   Andreas J. Guelzow <aguelzow@taliesin.ca>

	For Emmanuel Pacaud <emmanuel.pacaud@univ-poitiers.fr>
	http://bugzilla.gnome.org/show_bug.cgi?id=111075
	* dialog-stf-export-format-page.c
	(stf_export_dialog_format_page_init): add charmap_selector widget
	(stf_export_dialog_format_page_result): retrieve charset selection
	
	* dialog-stf-export.glade: add charset selection line

2003-04-26  Jody Goldberg <jody@gnome.org>

	* dialog-cell-sort.c : use connect_swapped, to avoid all the
	  irritating signature differences to call the same function.
